keycloak-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
    traefik.enable: "false"
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak-db
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
        traefik.enable: "false"
      creationTimestamp: null
      labels:
        io.kompose.network/keycloaktraefiktutorial_auth_net: "true"
        io.kompose.service: keycloak-db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: keycloak
        - name: POSTGRES_PASSWORD
          value: password
        - name: POSTGRES_ROOT_PASSWORD
          value: password
        - name: POSTGRES_USER
          value: keycloak
        image: postgres:11.2-alpine
        imagePullPolicy: ""
        name: keycloak-db
        ports:
        - containerPort: 5432
        resources: {}
        #volumeMounts:
        #- mountPath: /var/lib/postgresql/data
         # name: keycloak-db-data-vol
      restartPolicy: Always
      serviceAccountName: ""
      #volumes:
      #- name: keycloak-db-data-vol
       # persistentVolumeClaim:
        #  claimName: keycloak-db-data-vol
status: {}
