keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
    traefik.frontend.rule: Host:auth.lab.com
    traefik.port: "8443"
    traefik.protocol: https
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
        traefik.frontend.rule: Host:auth.lab.com
        traefik.port: "8443"
        traefik.protocol: https
      creationTimestamp: null
      labels:
        io.kompose.network/keycloaktraefiktutorial_auth_net: "true"
        io.kompose.service: keycloak
    spec:
      containers:
      - args:
        - -b
        - 0.0.0.0
        - -Dkeycloak.profile.feature.docker=enabled
        image: jboss/keycloak:7.0.1
        imagePullPolicy: ""
        name: keycloak
        resources: {}
      hostname: keycloak
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
