service-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
    traefik.enable: "false"
  creationTimestamp: null
  labels:
    io.kompose.service: service-1
  name: service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: service-1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
        traefik.enable: "false"
      creationTimestamp: null
      labels:
        io.kompose.network/keycloaktraefiktutorial_service_net: "true"
        io.kompose.service: service-1
    spec:
      containers:
      - image: containous/whoami
        imagePullPolicy: ""
        name: service-1
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
