keycloak-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
    traefik.enable: "false"
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak-db
  name: keycloak-db
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: keycloak-db
status:
  loadBalancer: {}
