keycloaktraefiktutorial_service_net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: keycloaktraefiktutorial-service-net
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/keycloaktraefiktutorial_service_net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/keycloaktraefiktutorial_service_net: "true"
